# dooz-code

./: CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md
.agent/skills/analyze-agent/: SKILL.md
.agent/skills/contract-agent/: SKILL.md
.agent/skills/execute-agent/: SKILL.md
.agent/skills/intake-agent/: SKILL.md
.agent/skills/plan-agent/: SKILL.md
.agent/skills/review-agent/: SKILL.md
.agent/skills/verify-agent/: SKILL.md
.agent/workflows/: async-task.md  full-pipeline.md  sub-contract.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  PHILOSOPHY.md
examples/: example-work-package.json
src/: errors.rs  lib.rs  logging.rs  main.rs  mcp_context.rs
src/agency/: execute.rs  message.rs  mod.rs  registry.rs  task.rs
src/analyzer/: dependencies.rs  files.rs  mod.rs  patterns.rs
src/config/: mod.rs
src/contracts/: dispatcher.rs  mod.rs  registry.rs  types.rs
src/executor/: apply.rs  generate.rs  llm.rs  mod.rs  step.rs
src/intake/: mod.rs  parser.rs  spec.rs
src/modes/: mod.rs  pipeline.rs
src/orchestrator/: mod.rs
src/planner/: decompose.rs  file_plan.rs  mod.rs  order.rs  rollback.rs
src/reviewer/: iterate.rs  mod.rs  validate.rs
src/signals/: audit.rs  mod.rs  progress.rs  status.rs
src/snapshot/: mod.rs
src/types/: artifact.rs  context.rs  identifiers.rs  mod.rs  plan.rs  result.rs  step.rs  work_package.rs
src/verifier/: checks.rs  mod.rs  report.rs
src/worktree/: executor.rs  mod.rs  pool.rs  queue.rs
tasks/: 01-modes-pipeline.md  02-worktree-executor.md  03-cli-integration.md  04-worker-redis.md  05-worker-dispatcher.md  06-worker-api.md  07-intake-module.md  08-verifier-module.md  09-web-ui-mvp.md  10-production-hardening.md  11-desktop-app.md  12-mobile-app.md  13-contracts-module.md  14-agent-marketplace.md
tests/: integration.rs
