[package]
name = "dooz-code"
version = "0.3.0-ultrawork"
edition = "2021"
description = "An autonomous coder that belongs inside a company"
license = "Apache-2.0"
repository = "https://github.com/DoozHub/dooz-code"
readme = "README.md"
keywords = ["autonomous", "execution", "coder", "deterministic", "governance"]
categories = ["development-tools", "command-line-utilities"]

# Constitutional: Execution only, no decision-making
[lib]
name = "dooz_code"
path = "src/lib.rs"

[[bin]]
name = "dooz-code"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = []
binary = ["clap"]
llm-integration = []

[dependencies]
# Serialization (deterministic, compact)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Cryptographic hashing (checksums, determinism verification)
sha2 = "0.10"

# File system traversal
walkdir = "2.4"

# Regex for pattern matching
regex = "1.10"

# HTTP clients for LLM providers
ureq = "2.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# URL encoding for Brain MCP queries
urlencoding = "2.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async trait support
async-trait = "0.1"

# CPU count detection
num_cpus = "1.16"

# Home directory detection
home = "0.5"

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional: CLI for binary (not used in library mode)
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
tempfile = "3.10"

[profile.release]
# Optimize for determinism and reliability over speed
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

# Constitutional constraints:
# - Scope is immutable during execution
# - Execution must be deterministic where possible
# - Governance must precede execution
# - Patterns must be respected
# - Context is required before execution
# - Audit trail must be complete
# - Network access only for LLM API calls
# - No cloud SDKs for deployment/infra
# - No autonomous feature creation outside approved scope
